<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Package Tracker</string>
    <string name="app_name_CAPS">PACKAGE TRACKER</string>
    <string name="welcome">Engineering the flow of communication.</string>
    <string name="order">Order Placement</string>
    <string name="orderCAPS">ORDER PLACEMENT</string>
    <string name="placeOrder">PLACE ORDER</string>
    <string name="track">Package Tracking</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="managerLogin">MANAGER LOGIN</string>
    <string name="userLogin">USER LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="customer">CUSTOMER</string>
    <string name="product">PRODUCT</string>
    <string name="cust">Enter Customer ID</string>
    <string name="loc">Enter Location</string>
    <string name="search">SEARCH</string>
    <string name="scan">SCAN</string>
    <string name="textScan">Scan the QR CODE/BARCODE</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="shipment_info">SHIPMENT INFO</string>
    <string name="package_id">Package ID : </string>
    <string name="shipment">SHIPMENT</string>
    <string name="track_by">TRACK BY</string>
    <string name="select_seller_id">Select Seller ID</string>
    <string name="select_product_id">Select Product ID</string>
    <string name="select_location">Select Location</string>
    <string name="enter_order_id">Enter Order ID</string>
    <string name="order_id">Order ID :</string>
    <string name="customer_id">Customer ID :</string>
    <string name="prod_id">Product :</string>
    <string name="seller">Seller :</string>
    <string name="locationL">Location :</string>
    <string name="shipment_id">Shipment ID :</string>
    <string name="dimen">Dimension :</string>
    <string name="weight">Weight :</string>
    <string name="shipment_track">Shipment Track :</string>
    <string-array name="sellers">
        <item>Seller 1</item>
        <item>Seller 2</item>
        <item>Seller 3</item>
    </string-array>

</resources>