<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/textScan"
            android:textColor="@color/white_greyish"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10px"
            android:background="@color/white_greyish" />


        <Button
            android:id="@+id/scanBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/scan"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="scanBAR"/>

        <View
            android:layout_width="fill_parent"
            android:layout_marginTop="30dp"
            android:layout_height="10px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/tv_result"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:textColor="@color/white_greyish"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/search"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="printProduct"/>

    </LinearLayout>

</RelativeLayout>