<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/pitneylogo" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textColor="@color/white_greyish"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/app_name_CAPS"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3px"
            android:background="@color/white_greyish" />


<!--        <Button-->
<!--            android:id="@+id/track"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:background="@drawable/loginbutton_selector"-->
<!--            android:onClick="switchToCustomer"-->
<!--            android:padding="3dp"-->
<!--            android:text="@string/placeOrder"-->
<!--            android:textColor="#009688"-->
<!--            android:textSize="17sp"-->
<!--            android:textStyle="bold" />-->

        <Button
            android:id="@+id/track"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_selector"
            android:onClick="switchToManager"
            android:padding="3dp"
            android:text="@string/track"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameContainer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>