<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/pitneylogo"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/shipment_info"
                android:textColor="@color/white_greyish"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5px"
            android:background="@color/white_greyish"
            android:layout_marginBottom="30dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/shipment_id"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prod1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/dimen"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prod2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/weight"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prod3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tracked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/shipment_track"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prod4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_below="@+id/tracked"
                android:textAlignment="center"
                android:textColor="@color/white_greyish"
                android:textSize="19sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>